tests/errors/lexer/missing_terminating_quote_char.c
// Missing terminating quote char
void main()
{
	"Привет
	;
}
